# compression

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  TODO.md  X_compressed.mat  gamma_ind_s.m  gamma_ind_zero.m  gamma_zero.m  lanczos.m  lanczos_pca_ind_mone.m  lanczos_pca_mone.m  netcdf_pca_devel.m  theta_s.m
cxx/: CMakeLists.txt  module_usi_compression  usi_compression_setup.sh
cxx/compression/: CMakeLists.txt  CompressedMatrix.h  L_value.h  L_value.txx  Makefile  find.cxx  find.h  gamma_s.cxx  gamma_s.h  gamma_s.txx  gamma_zero.cxx  gamma_zero.h  gamma_zero.txx  generic_wrappers.h  lanczos_correlation.h  lanczos_correlation.txx  lanczos_correlation_eigen.h  lanczos_correlation_eigen.txx  lanczos_correlation_minlin.h  lanczos_correlation_minlin.txx  matrices.h  minlin_wrappers.h  netcdf_get_data.cpp  netcdf_get_data_eigen.cpp  read_from_netcdf.h  read_timeseries_matrix.h  read_timeseries_matrix.hpp  read_timeseries_matrix.txx  reconstruction.h  reconstruction.txx  reduction.h  reduction.txx  theta_s.h  theta_s.txx  usi_compression.cpp  usi_compression.h
cxx/eigen/: CMakeLists.txt
cxx/misc/: lanczos_correlation.txx  netcdf_get_data.cpp  netcdf_get_data_eigen.cpp
cxx/viennaCL/: CMakeLists.txt
cxx/viennaCL/doc/: Doxyfile.in
cxx/viennaCL/doc/doxygen/html/: adapter_8hpp.html  adapter_8hpp_source.html  amg_8hpp.html  amg_8hpp_source.html  amg__base_8hpp.html  amg__base_8hpp_source.html  amg__coarse_8hpp.html  amg__coarse_8hpp_source.html  amg__debug_8hpp.html  amg__debug_8hpp_source.html  amg__interpol_8hpp.html  amg__interpol_8hpp_source.html  annotated.html  backend_8hpp.html  backend_8hpp_source.html  bandwidth__reduction_8hpp.html  bandwidth__reduction_8hpp_source.html  bicgstab_8hpp.html  bicgstab_8hpp_source.html  bisect_8hpp.html  bisect_8hpp_source.html  block__ilu_8hpp.html  block__ilu_8hpp_source.html  block__matrix_8hpp.html  block__matrix_8hpp_source.html  block__vector_8hpp.html  block__vector_8hpp_source.html  cg_8hpp.html  cg_8hpp_source.html  circulant__matrix_8hpp.html  circulant__matrix_8hpp_source.html  circulant__matrix__operations_8hpp.html  circulant__matrix__operations_8hpp_source.html  classes.html  classviennacl_1_1advanced__cuthill__mckee__tag.html  classviennacl_1_1any.html  classviennacl_1_1backend_1_1mem__handle.html  classviennacl_1_1backend_1_1typesafe__host__array.html  classviennacl_1_1backend_1_1typesafe__host__array_3_01_t_00_01true_01_4.html  classviennacl_1_1bad__any__cast.html  (+1243 more)
cxx/viennaCL/examples/parameters/: matrix.cpp  sparse.cpp  vector.cpp
cxx/viennaCL/viennacl/: matrix.hpp  scalar.hpp  vector.hpp
cxx/viennaCL/viennacl/meta/: predicate.hpp  result_of.hpp
cxx/viennaCL/viennacl/ocl/: device.hpp  kernel.hpp
cxx/viennaCL/viennacl/tools/: tools.hpp
documents/: README.md
eigen/cmake/: EigenConfigureTesting.cmake  EigenDetermineVSServicePack.cmake
evaluation/: Distributed vs compressed levels.ipynb  Ensemble Runs.ipynb  Include vs exclude 2D.ipynb  Optimal Clusters.ipynb  README.md  RMSZ Analysis.ipynb  Spread within variables.ipynb  USI Compression Data Analysis.ipynb  overall_statistics_3d.txt  overall_statistics_alldistributed_3d.txt  overall_statistics_ensemble.txt  overall_statistics_klarge.txt  overall_statistics_ksmall.txt  pyStats_documentation.md  rmsz_orig_4var.txt  rmsz_recon_4var.txt  variable_information.txt  variable_statistics_3d.txt  variable_statistics_alldistributed_3d.txt
matlab/: ClusterMeanCov.m  L_value_ind.m  L_value_mlarge_ind.m  X_comp_Lossless.mat  cluster_EOF.m  gamma_ind_s.m  gamma_ind_zero.m  gamma_s.m  lanczos_elman.m  lanczos_elman_ind.m  lanczos_pca.m  netcdf_pca.m  netcdf_pca_clustering.m  netcdf_pca_time_level.m  test_EOF_clustering.m  theta_ind_s.m
misc/: lanczos_example.cxx
src/: CMakeLists.txt  CompressedMatrix.h  NetCDFInterface.h  lanczos_correlation_eigen.h  lanczos_correlation_minlin.h  matrices.h  matrix_statistics.h  mpi_type_helper.h  read_from_netcdf.h  usi_compression.cpp  usi_compression.cu
util/: generate_batch_files.sh  module_usi_compression  overall_statistics.awk  rmsz.py  test.nc4  usi_compression_module  usi_compression_setup.sh  variable_information.awk  variable_statistics.awk
